# insure-agent

./: .gitignore  commands.md  docker-compose.yml  migrate_backup_to_insure.sql
back/: .env  Cargo.toml  Dockerfile
back/.sqlx/: query-026320f3e0d9d013dcdc36f5f7a64182973f743757d0bf6e783faad87b60fd65.json  query-034a9d4aef96b526ef0a4cfa9dbaa53e64b70d0840926f6bca9210b12e66487d.json  query-0380e0ccb33ad6801ed95972f9db5dcbd9aaefd22d114be36c0f031c168e064e.json  query-03e77be19ad7212877208281a035b5a281b6d65954d06939be050ad122aae1a9.json  query-06e838a85a0c76ccbcd333efe06d02b02d301037380f48058df9fc20c490a8cb.json  query-0bf483708284e7b57e83ccc9de3518ffd9788af0dfcbf98e58c2fe75906deae0.json  query-0ca9820d0989f3a821bd8f20257971480c9ab9e134d6a5f7d40adddee0190bba.json  query-1041f9f4be92365bda732236df735f18cfd128ac4df06134ddaca2c2c2149504.json  query-10e97b24a194b9cc0393a0b304b48e7d97dc4205ee97458c7374b42b4a458bb3.json  query-14059679326e9590b2e67edb7ab8b07d0361e0478a50f42ac2f68f73282aa13c.json  query-1408af1d8d0c8b5d7420798dd6d37daac61f64c2c7640a2c3a83c7eb17627e49.json  query-15ed05bc7f3225df0ba59de19001c7437c4c01317696befab8664fe776ad4641.json  query-175b8780ac7c78c0e3f2a6d61f8a99dfc498cbf99c2aca5c8a7942b1d059f259.json  query-1a376842a1bb94fe0d9152de398b8192709e49b72165ae343ebc6daef2d87184.json  query-1e05461abb9299145bb8a9f5f6be4997b51c14abc21ac884d54e0a313e021089.json  query-1e649afd888581e5cb7791944fe7780b3a36e7cabf6882db8410a87c025411b3.json  query-21c5caf935e40998b892f65877c1f8ceba2ca15c15003f368d9f08c3504b96a9.json  (+49 more)
back/migrations/: 20260201080334_init.sql  (+1 more)
(+138 files in other folders)
