[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
hyper = { version = "1.8.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower-cookies = "0.11"
dotenvy = "0.15"
reqwest = { version = "0.13.1", features = ["json", "form"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
